--- a/spec/00Title.tex
+++ b/spec/00Title.tex
@@ -73,7 +73,7 @@
 2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Госстандарта Республики 
 Беларусь от $\phantom{\text{12 августа 2016 г.}}$ \No~$\phantom{\text{62}}$
 
-3~ВВЕДЕН ВМЕСТО СТБ 34.101.77-2016
+3~ВЗАМЕН СТБ 34.101.77-2016
 
 \vfill
 \hrule
