--- a/spec/01Logo.tex
+++ b/spec/01Logo.tex
@@ -35,10 +35,10 @@ Sponge-based cryptographic algorithms
 
 \chapter{Область применения}
 
-Настоящий стандарт устанавливает криптографические алгоритмы \addendum{на основе
+Настоящий стандарт устанавливает криптографические алгоритмы на основе
 sponge-функции~--- криптографической функции, которая задает сложное 
 преобразование двоичных слов большой длины. Устанавливаемые алгоритмы 
-предназначены} для контроля целостности и подлинности, обеспечения 
+предназначены для контроля целостности и подлинности, обеспечения 
 конфиденциальности и других способов защиты информации при ее хранении, 
 передаче и обработке.
 
