--- a/spec/02Refs.tex
+++ b/spec/02Refs.tex
@@ -4,7 +4,7 @@
 технические нормативные правовые акты в области 
 технического нормирования и стандартизации (далее~--- ТНПА):
 
-СТБ~34.101.31-202\addendum{X} Информационные технологии и безопасность. 
+СТБ~34.101.31-202X Информационные технологии и безопасность. 
 Алгоритмы шифрования и контроля целостности
 
 СТБ~34.101.45-2013 Информационные технологии и безопасность. 
@@ -21,7 +21,7 @@
 и по соответствующим информационным указателям, опубликованным в текущем году.
 
 Если ссылочные ТНПА заменены (изменены), то при пользовании настоящим стандартом
-следует руководствоваться \addendum{действующими взамен ТНПА}. Если ссылочные ТНПА
+следует руководствоваться действующими взамен ТНПА. Если ссылочные ТНПА
 отменены без замены, то положение, в котором дана ссылка на них, применяется в
 части, не затрагивающей эту ссылку.
 \end{note}
