--- a/spec/03Terms.tex
+++ b/spec/03Terms.tex
@@ -1,18 +1,12 @@
-\chapter{Термины и определения и сокращения}
+\chapter{Термины и определения}
 
 В настоящем стандарте применяют
 следующие термины с соответствующими определениями:
 
-{\bf \thedefctr~автомат (криптографический)}:
-\addendum{Л}огическое устройство, способное находиться в одном из нескольких 
-состояний, \addendum{выполнять} хэширование, шифрование, имитозащиту и другие 
-криптографические \addendum{операции} с помощью команд, изменяющих 
-состояние.
-
 {\bf \thedefctr~анонс}:
 Входные данные криптографического алгоритма,
-которые задают определенный контекст его использования,
-могут включать синхропосылку.
+которые задают определенный контекст его использования
+и могут включать синхропосылку.
 
 {\bf \thedefctr~аутентифицированное шифрование}:
 Одновременные шифрование и имитозащита.
@@ -20,7 +14,7 @@
 {\bf \thedefctr~зашифрование}:
 Преобразование сообщения,
 направленное на обеспечение его конфиденциальности,
-которое \addendum{выполняется} с использованием ключа.
+которое выполняется с использованием ключа.
 
 {\bf \thedefctr~имитовставка}:
 Двоичное слово, 
@@ -31,12 +25,8 @@
 Контроль целостности и подлинности сообщений, 
 который реализуется путем выработки и проверки имитовставок.
 
-{\bf \thedefctr~ключ (секретный)}:
-Параметр, который управляет операциями шифрования 
-и имитозащиты и который известен только определенным сторонам.
-
 {\bf \thedefctr~команда}:
-\addendum{А}лгоритм, который связан с автоматом, принимая 
+Алгоритм, который связан с автоматом, принимая 
 в качестве дополнительного входа его текущее состояние
 и возвращая дополнительно обновленное состояние.
 
@@ -44,12 +34,17 @@
 Гарантия того, что сообщения доступны для понимания или использования
 только тем сторонам, которым они предназначены.
 
+{\bf \thedefctr~(криптографический) автомат}:
+Логическое устройство, способное находиться в одном из нескольких 
+состояний, выполнять хэширование, шифрование, имитозащиту и другие 
+криптографические операции с помощью команд, изменяющих состояние.
+
 {\bf \thedefctr~октет}:
 Двоичное слово длины~$8$.
 
 {\bf \thedefctr~подлинность}:
-Гарантия того, что сторона действительно является
-\addendum{владельцем, создателем или  отправителем} определенного сообщения.
+Гарантия того, что сторона действительно является владельцем, 
+создателем или отправителем определенного сообщения.
 
 {\bf \thedefctr~псевдослучайные числа}: 
 Последовательность элементов, полученная в результате выполнения некоторого
@@ -58,6 +53,10 @@
 
 {\bf \thedefctr~расшифрование}:
 Преобразование, обратное зашифрованию.
+
+{\bf \thedefctr~(секретный) ключ}:
+Параметр, который управляет операциями шифрования 
+и имитозащиты и который известен только определенным сторонам.
 
 {\bf \thedefctr~синхропосылка}:
 Открытые входные данные криптографического алгоритма,
@@ -93,9 +92,5 @@
 
 {\bf \thedefctr~шифрование}:
 Зашифрование или расшифрование.
-
-В настоящем стандарте применяют следующее сокращение:
-
-ЭЦП~---~электронная цифровая подпись.
 
 
