--- a/spec/04Defs.tex
+++ b/spec/04Defs.tex
@@ -1,6 +1,6 @@
-\chapter{Обозначения}\label{DEFS}
+\chapter{Обозначения и сокращения}\label{DEFS}
 
-\section{Список обозначений}
+\section{Список обозначений и сокращений}
 
 {\tabcolsep 0pt
 \begin{longtable}{lrp{14.0cm}}
@@ -29,7 +29,7 @@ $\{0,1\}^{n*}$  &&
 %
 $\alpha^n$  &&
 для $\alpha\in\{0,1\}$ слово из $n$ экземпляров $\alpha$
-\addendum{($\alpha^0=\perp$)};
+($\alpha^0=\perp$);
 \\[4pt]
 %
 $u[i]$ &&
@@ -101,7 +101,7 @@ $u\vee v$             &&
 %
 $\btoi{u}$           &&
 а)~для октета~$u\in\{0,1\}^8$
-число $2^7 u[0]+2^6 u[1]+\ldots+u[7]$\addendum{,}\\[2pt]
+число $2^7 u[0]+2^6 u[1]+\ldots+u[7]$,\\[2pt]
 %
                         &&
 б)~для~$u=u_0\parallel u_1\parallel\ldots\parallel u_{n-1}$, 
@@ -152,8 +152,9 @@ $a\leftarrow u$         &&
 \\[4pt]
 %
 $\min(u,v)$         &&
-минимальное из чисел $u$ и $v$.
+минимальное из чисел $u$ и $v$;
 \\[4pt]
+ЭЦП && электронная цифровая подпись.
 \end{longtable}
 } % tabcolsep
 \setcounter{table}{0}
@@ -173,7 +174,7 @@ w=
 1000 1001 1010 1011 1100 1101 1110 1111.
 $$
 В этом слове первые семь битов нулевые, затем~--- $1$, затем~--- два~$0$ и 
-\addendum{т.~д.}
+т.~д.
 
 Двоичное слово разбивается на тетрады из четверок последовательных битов.
 %
@@ -184,10 +185,8 @@ $$
 \caption{}\label{Table.Hex}
 \begin{tabular}{|c|c||c|c||c|c||c|c|}
 \hline
-\addendum{Тетрада} & \addendum{Символ} & 
-\addendum{Тетрада} & \addendum{Символ} & 
-\addendum{Тетрада} & \addendum{Символ} & 
-\addendum{Тетрада} & \addendum{Символ} \\
+Тетрада & Символ & Тетрада & Символ & 
+Тетрада & Символ & Тетрада & Символ\\
 \hline
 0000 & $\hex{0}$ & 0001 & $\hex{1}$ & 
 0010 & $\hex{2}$ & 0011 & $\hex{3}$\\
@@ -259,7 +258,7 @@ $$
 При отождествлении слов с числами удобно представить себе 
 гипотетический регистр, разрядность которого совпадает с длиной слова.
 В самый правый октет регистра загружается первый октет слова, 
-во второй справа октет регистра~--- второй октет слова и \addendum{т.~д.},
+во второй справа октет регистра~--- второй октет слова и т.~д.,
 пока, наконец, в самый левый октет регистра не загружается последний 
 октет слова.
 %
@@ -321,14 +320,14 @@ $$
 \section{Запись перечислений}\label{DEFS.Seqs}
 
 При записи последовательности~$u_1,u_2,\ldots,u_n$ 
-допускается, если не оговорено \addendum{иное}, выполнение неравенства $n<2$.
+допускается, если не оговорено иное, выполнение неравенства $n<2$.
 При $n=0$ идет речь о пустой последовательности, 
 а при $n=1$~--- об одноэлементной последовательности $u_1$.
 
 Аналогичные соглашения распространяются на запись конкатенации нескольких 
 слов, итератора цикла.
 %
-Например\addendum{:}
+Например:
 \begin{itemize}
 \item
 слово $u_1\parallel u_2\parallel\ldots\parallel u_n$ является пустым при $n=0$ 
