--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -10,9 +10,9 @@
 Криптографические алгоритмы делятся на две группы:
 \begin{enumerate}
 \item[1)]
-алгоритмы хэширования (\addendum{см.}~\ref{HASH});
+алгоритмы хэширования (см. раздел~\ref{HASH});
 \item[2)]
-программируемые алгоритмы (\addendum{см.}~\ref{PRG}).
+программируемые алгоритмы (см. раздел~\ref{PRG}).
 \end{enumerate}
 
 Алгоритм хэширования по сообщению произвольной длины строит 
@@ -28,7 +28,7 @@
 Алгоритмы хэширования могут дополнительно использоваться при построении 
 самих систем ЭЦП, генераторов случайных и псевдослучайных чисел, 
 протоколов аутентификации,
-криптографических \addendum{аккумуляторов}, 
+криптографических аккумуляторов, 
 % криптографических аккумуляторов в стиле деревьев Меркля?
 доказательств вычислительной работы и др.
 
@@ -38,9 +38,9 @@
 того же хэширования.
 %
 В настоящем стандарте объявляются 
-правила безопасного программирования (\addendum{см.}~\ref{PRG.Rules}),
-явно определяются программируемые алгоритмы хэширования (\addendum{см.}~\ref{PRG.Hash}) 
-и аутентифицированного шифрования (\addendum{см.}~\ref{PRG.AE}).
+правила безопасного программирования (см.~\ref{PRG.Rules}),
+явно определяются программируемые алгоритмы хэширования (см.~\ref{PRG.Hash}) 
+и аутентифицированного шифрования (см.~\ref{PRG.AE}).
 
 Программируемые алгоритмы хэширования обладают большей гибкостью, 
 чем базовые: с их помощью можно вычислять хэш-значения произвольной длины,
@@ -80,7 +80,7 @@
 \begin{note}
 Примечание~---~Схожие по назначению алгоритмы установлены в СТБ~34.101.31. 
 Алгоритмы настоящего стандарта дают дополнительные функциональные возможности.
-Наприме\addendum{р,} алгоритмы хэширования поддерживают все три уровня стойкости 
+Например, алгоритмы хэширования поддерживают все три уровня стойкости 
 алгоритмов ЭЦП, определенных в СТБ 34.101.45, в то время как алгоритм 
 хэширования СТБ 34.101.31 поддерживает только первый уровень.
 %
@@ -129,12 +129,12 @@ C ростом~$l$ повышается стойкость алгоритмов 
 \section{Емкость}\label{COMMON.Capacity}
 
 В программируемых алгоритмах уровень стойкости $l$ сопровождается емкостью 
-$d\in\{1,2\}$\addendum{. 
+$d\in\{1,2\}$. 
 %
 % Емкость определяет объем внутренней памяти автомата программируемого 
 % алгоритма. 
 %
-С} увеличением емкости повышаются гарантии безопасности, 
+С увеличением емкости повышаются гарантии безопасности, 
 но снижается производительность. 
 %
 Выбор~$(l,d)=(256,2)$ обеспечивает максимальные гарантии.
@@ -187,9 +187,9 @@ $d\in\{1,2\}$\addendum{.
 построению второго прообраза (найти другое сообщение с тем же хэш-значением)
 и построению коллизии (найти различные сообщения с одинаковыми хэш-значениями).
 %
-\addendum{Трудоемкость представлена в таблице в логарифмической форме:
+Трудоемкость представлена в таблице в логарифмической форме:
 для осуществления атаки трудоемкости~$u$ требуется выполнить порядка~$2^u$ 
-операций}.
+операций.
 
 \section{Ключ}\label{COMMON.Key}
 
@@ -204,10 +204,10 @@ $d\in\{1,2\}$\addendum{.
 Ключ большей длины может быть избыточным кодом $l$-битового 
 ключа, например, дополнительно содержать контрольные биты.
 
-Сразу после \addendum{загрузки} ключа автомат программируемого алгоритма 
+Сразу после загрузки ключа автомат программируемого алгоритма 
 переходит в ключевой режим. В этом режиме автомат может выполнять шифрование, 
 аутентифицированное шифрование, имитозащиту, генерировать 
-\addendum{псевдослучайные числа для создания секретных объектов}.
+псевдослучайные числа для создания секретных объектов.
 
 Пока ключ не введен, автомат остается в бесключевом режиме. Здесь можно только 
 хэшировать данные. 
@@ -215,13 +215,13 @@ $d\in\{1,2\}$\addendum{.
 \section{Имитовставка}\label{COMMON.MAC}
 
 С помощью программируемых алгоритмов можно вычислять имитовставки.
-Это данные, \addendum{которые выдает} автомат программируемого 
+Это данные, которые выдает автомат программируемого 
 алгоритма, причем автомат переведен в ключевой режим.
 
 В алгоритмах аутентифицированного шифрования длина имитовставки 
 совпадает с уровнем стойкости~$l$. 
 
-В других алгоритмах могут \addendum{вычисляться} имитовставки сколь угодно 
+В других алгоритмах могут вычисляться имитовставки сколь угодно 
 большой длины или даже последовательности имитовставок. Имитовставки могут 
 интерпретироваться как псевдослучайные числа (биты), а автомат~--- как их 
 генератор. 
@@ -232,8 +232,8 @@ $d\in\{1,2\}$\addendum{.
 Ключи и другие секретные объекты должны строиться по непересекающимся 
 фрагментам последовательностей псевдослучайных чисел.
 %
-Если генерируемый ключ \addendum{используется} для управления другим автоматом, 
-то уровень стойкости целевого автомата не должен быть выше уровня стойкости
+Если генерируемый ключ используется для управления другим автоматом, 
+то уровень стойкости целевого автомата не должен быть выше уровня стойкости 
 генерирующего.
 
 \section{Анонс}\label{COMMON.Anounce}
@@ -260,10 +260,10 @@ $d\in\{1,2\}$\addendum{.
 
 Синхропосылки, которые используются с одним и тем же ключом для шифрования 
 различных сообщений, должны быть уникальны: на уровне~$l$ они могут повторяться 
-только с вероятностью близкой к~$2^{-l}$. Например, если синхропосылка строится 
-как случайное или псевдослучайное число и с одним ключом планируется 
-использовать~$q$ синхропосылок длины~$m$, то должно выполняться ограничение
-$q^2\cdot 2^l\leq 2^{m+1}$.
+только с вероятностью, близкой к~$2^{-l}$. Например, если 
+синхропосылка строится как случайное или псевдослучайное число и с одним ключом 
+планируется использовать~$q$ синхропосылок длины~$m$, то должно выполняться 
+ограничение $q^2\cdot 2^l\leq 2^{m+1}$.
 
 Синхропосылки могут быть неявными: в их качестве могут выступать волатильные 
 открытые данные, которые обрабатываются до шифрования сообщений.
@@ -279,8 +279,8 @@ $q^2\cdot 2^l\leq 2^{m+1}$.
 Синхропосылка необязательна, если шифрование не 
 предполагается, а речь идет только об имитозащите.
 
-При генерации псевдослучайных чисел, \addendum{предназначенных для построения 
-ключей и других секретных объектов}, действуют те же требования к 
+При генерации псевдослучайных чисел, предназначенных для построения 
+ключей и других секретных объектов, действуют те же требования к 
 синхропосылкам, что и при шифровании.
 
 \section{Интерфейсы}\label{COMMON.IFace}
@@ -289,12 +289,12 @@ $q^2\cdot 2^l\leq 2^{m+1}$.
 коротких имен, описания параметров и соглашений о входных и выходных данных.
 В совокупности такая вводная информация называется интерфейсом.
 %
-Например, алгоритму хэширования, определенному в~\ref{HASH}, назначается
-имя~$\algname{bash-hash}$, объявляется, что его параметром является уровень
-стойкости~$l$. 
+Например, алгоритму хэширования, определенному в разделе~\ref{HASH}, 
+назначается имя~$\algname{bash-hash}$, объявляется, что его параметром является 
+уровень стойкости~$l$. 
 %
 Алгоритм, полученный из основного определенной настройкой параметров,
-считается самостоятельным алгоритмом. Так\addendum{,} самостоятельным является 
+считается самостоятельным алгоритмом. Так, самостоятельным является 
 алгоритм $\algname{bash-hash}[l]$. 
 %
 В интерфейсе объявляется, что его входными данными является хэшируемое 
@@ -307,7 +307,7 @@ $q^2\cdot 2^l\leq 2^{m+1}$.
 записывается как~$Y\leftarrow\algname{bash-hash}[l](X)$.
 
 Алгоритм может вызываться в других алгоритмах настоящего стандарта или 
-в алгоритмах других стандартов. И наоборот\addendum{,} алгоритм может вызывать другие 
+в алгоритмах других стандартов. И наоборот, алгоритм может вызывать другие 
 алгоритмы. В последнем случае интерфейс содержит перечень задействованных 
 алгоритмов.
 
@@ -321,14 +321,14 @@ $q^2\cdot 2^l\leq 2^{m+1}$.
 Речь идет, в том числе, о переменных алгоритма хэширования, 
 который может использоваться для обработки критических данных.
 
-При реализации алгоритма объявленные переменные \addendum{следует} очищать после
+При реализации алгоритма объявленные переменные следует очищать после
 использования. 
 %
-Очистке подлежи\addendum{т в} том числе автомат (точнее, его состояние),
+Очистке подлежит в том числе автомат (точнее, его состояние),
 задействованный в программируемом алгоритме.
 %
-\addendum{При организации очистки необходимо учитывать особенности
-реализации, например, ситуации, когда} переменная алгоритма представляется
+При организации очистки необходимо учитывать особенности
+реализации, например, ситуации, когда переменная алгоритма представляется
 несколькими переменными реализации.
 
 Очистка переменных алгоритма может не выполняться, если алгоритм все-таки 
