--- a/spec/0801Auto.tex
+++ b/spec/0801Auto.tex
@@ -42,7 +42,7 @@ $000100$\\
 \end{tabular}
 \end{table}
 
-\addendum{Перечень допустимых команд автомата}:
+Перечень допустимых команд автомата:
 \begin{itemize}
 \item
 \algname{start} (инициализировать);
