--- a/spec/0807Squeeze.tex
+++ b/spec/0807Squeeze.tex
@@ -3,7 +3,7 @@
 \subsection{Интерфейс}\label{PRG.Squeeze.IFace}
 
 Входными данными команды~$\algname{squeeze}$ является длина выхода~$n$.
-Число~$n$ должно быть неотрицательным целым кратным~$8$.
+Число~$n$ должно быть неотрицательным целым, кратным~$8$.
 
 Выходными данными является слово~$Y\in\{0,1\}^n$.
 
