--- a/spec/0811Rules.tex
+++ b/spec/0811Rules.tex
@@ -59,7 +59,7 @@
 Вычислить~$Y_2\leftarrow\gamma.\algname{encrypt}(X)$.
 \end{enumerate}
 
-Присваивание $\gamma\leftarrow\beta$ означает, что в $\gamma$ переписывается 
+Присваивание $\gamma\leftarrow\beta$ означает, что в $\gamma$ переписываются 
 состояние и сопровождающие параметры~$\beta$. 
 %
 После присваивания автоматы становятся эквивалентными. Эквивалентные автоматы 
