--- a/spec/92ASN.tex
+++ b/spec/92ASN.tex
@@ -7,16 +7,16 @@
 \begin{center}
 \begin{tabular}{p{3.6cm}p{12.7cm}}
 \texttt{bashNNN} &
-\addendum{А}лгоритм хэширования $\algname{bash-hash}[l]$;\\
+Алгоритм хэширования $\algname{bash-hash}[l]$.\\
 %
 \texttt{bash-prg-hashNNND} &
-\addendum{А}лгоритм хэширования $\algname{bash-prg-hash}[l,d]$;\\
+Алгоритм хэширования $\algname{bash-prg-hash}[l,d]$.\\
 %
 \texttt{bash-prg-aeLLLD} &
-\addendum{А}лгоритм аутентифицированного шифрования $\algname{bash-prg-ae}[l,d]$;\\
+Алгоритм аутентифицированного шифрования $\algname{bash-prg-ae}[l,d]$.\\
 %
 \texttt{bash-f}  &
-\addendum{А}лгоритм вычисления значений sponge-функции (пункт~\ref{F}).\\
+Алгоритм вычисления значений sponge-функции (см.~\ref{F}).\\
 \end{tabular}
 \end{center}
 
@@ -33,13 +33,13 @@
 %
 Уточненным алгоритмам ЭЦП присваиваются следующие идентификаторы:
 \begin{center}
-\begin{tabular}{p{4.4cm}p{11.6cm}}
+\begin{tabular}{p{4.4cm}p{12.0cm}}
 \texttt{bign-with-bashNNN} &
-\addendum{А}лгоритмы ЭЦП СТБ 34.101.45 (пункт 7.1)
-c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$;\\
+Алгоритмы ЭЦП СТБ 34.101.45 (пункт 7.1)
+c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$.\\
 %
 \texttt{bign-ibs-with-bashNNN} &
-\addendum{А}лгоритмы идентификационной ЭЦП СТБ 34.101.45
+Алгоритмы идентификационной ЭЦП СТБ 34.101.45
 c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$.\\
 \end{tabular}
 \end{center}
