--- a/spec/914TestPrg3.tex
+++ b/spec/914TestPrg3.tex
@@ -32,15 +32,15 @@ $\hex{92BD9B1CE5D14101~5445FBC95E4D0EF2~682080AA227D64}$\\
 \hline
 $K_1$ 
 &
-$\addendum{\hex{71CC358A0D508217~3DE04803F7E905CB}}$\\
+$\hex{71CC358A0D508217~3DE04803F7E905CB}$\\
 \hline
 $Y_1$ 
 &
-$\addendum{\hex{51ED3B28D345FFD1~AD22815B86ECC17C~278C8FE8920214}}$\\
+$\hex{51ED3B28D345FFD1~AD22815B86ECC17C~278C8FE8920214}$\\
 \hline
 $Y_2$ 
 &
-$\addendum{\hex{28FE0998BFC010F1~3B260685A27AFB36~CCF580F753521B}}$\\
+$\hex{28FE0998BFC010F1~3B260685A27AFB36~CCF580F753521B}$\\
 \hline
 \end{tabular}
 \end{table}
