--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -241,7 +241,7 @@ $d\in\{1,2\}$.
 С помощью анонса можно уточнить контекст использования программируемого 
 алгоритма~--- сузить назначение, локализовать, задать настройки.
 %
-Например один анонс может описывать исходящий трафик сети~A, 
+Например, один анонс может описывать исходящий трафик сети~A, 
 второй~--- внутренний трафик сети~B.
 %
 Алгоритмы разных контекстов, то есть с разными анонсами, 
@@ -318,7 +318,7 @@ $d\in\{1,2\}$.
 ключа или промежуточный результат вычислений, который упрощает определение 
 этого фрагмента.
 %
-Речь идет, в том числе, о переменных алгоритма хэширования, 
+Речь идет в том числе о переменных алгоритма хэширования, 
 который может использоваться для обработки критических данных.
 
 При реализации алгоритма объявленные переменные следует очищать после
@@ -328,7 +328,7 @@ $d\in\{1,2\}$.
 задействованный в программируемом алгоритме.
 %
 При организации очистки необходимо учитывать особенности
-реализации, например, ситуации, когда переменная алгоритма представляется
+реализации, например ситуации, когда переменная алгоритма представляется
 несколькими переменными реализации.
 
 Очистка переменных алгоритма может не выполняться, если алгоритм все-таки 
