--- a/spec/0801Auto.tex
+++ b/spec/0801Auto.tex
@@ -62,10 +62,10 @@ $000100$\\
 
 Команды выполняются в отложенной манере: выполнение текущей 
 команды завершается в начале выполнения следующей.
-Для завершения используется внутренняя служебная команда~\algname{commit}, 
+Для завершения используется внутренняя команда~\algname{commit}, 
 которую можно вызывать только из других команд.
 
-Команды определяются в~\ref{PRG.Start}~--- \ref{PRG.Ratchet}.
+Команды определяются в~\ref{PRG.Start}--\ref{PRG.Ratchet}.
 %
 Каждая команда имеет полный доступ к состоянию автомата.
 Состояние исключается из входных и выходных данных команд.
