--- a/spec/0813AE.tex
+++ b/spec/0813AE.tex
@@ -111,6 +111,6 @@ $X\leftarrow\alpha.\algname{decrypt}(Y)$;
 \begin{note}
 Примечание~5~--- Расширения алгоритма установки защиты в соответствии 
 с примечаниями~1--4 зеркально переносятся на алгоритм снятия защиты
-с одним уточнением: после возврата~$\perp$ обработка новых пар~$(Y,I,T)$
+с одним уточнением: после возврата~$\perp$ обработка новых троек~$(Y,I,T)$
 должна быть прекращена.
 \end{note}
