--- a/spec/00Title.tex
+++ b/spec/00Title.tex
@@ -22,9 +22,6 @@
 {\bf\large КРЫПТАГРАФIЧНЫЯ АЛГАРЫТМЫ НА АСНОВЕ}\\
 {\bf\large SPONGE-ФУНКЦЫІ}
 
-\noindent
-%{Настоящий проект стандарта не подлежит применению до его утверждения}
-
 \vskip9cm
 \hrule height 1pt
 \vskip0.4mm
@@ -68,10 +65,10 @@
 <<Науч\-но-исследовательский институт прикладных проблем математики и 
 информатики>> 
 
-ВНЕСЕН  
+ВНЕСЕН Комитетом государственной безопасности Республики Беларусь
 
-2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Госстандарта Республики 
-Беларусь от $\phantom{\text{12 августа 2016 г.}}$ \No~$\phantom{\text{62}}$
+2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Государственного комитета 
+по стандартизации Республики Беларусь от 05.11.2020~г. \No~64
 
 3~ВЗАМЕН СТБ 34.101.77-2016
 
