--- a/spec/_body.tex
+++ b/spec/_body.tex
@@ -1,4 +1,4 @@
-\def\draftlogo{\scshape\small СТБ 34.101.77-202X}
+\def\draftlogo{\scshape\small СТБ 34.101.77-2020}
 
 \pagestyle{myheadings}
 \input{00Title}
