--- a/spec/0802State.tex
+++ b/spec/0802State.tex
@@ -5,11 +5,11 @@
 Оно сопровождается следующими параметрами:
 \begin{itemize}
 \item
-$l\in\{128,192,256\}$~--- уровень стойкости;
+$\ell\in\{128,192,256\}$~--- уровень стойкости;
 \item
 $d\in\{1,2\}$~--- емкость;
 \item
-$r\in\{1536-2dl,1536-l-dl/2\}$~--- длина буфера (см. далее);
+$r\in\{1536-2d\ell,1536-\ell-d\ell/2\}$~--- длина буфера (см. далее);
 \item
 $pos\in\{0,1,\ldots,r-1\}$~--- текущее смещение в буфере.
 \end{itemize}
@@ -17,7 +17,7 @@ $pos\in\{0,1,\ldots,r-1\}$~--- текущее смещение в буфере.
 Эти параметры устанавливаются или используются в командах, 
 хотя и не указываются в качестве входных и выходных данных.
 %
-Параметры $l$ и $d$ устанавливаются при инициализации автомата и после этого 
+Параметры $\ell$ и $d$ устанавливаются при инициализации автомата и после этого 
 не меняются.
 
 Состояние~$S$ разбивается на 2 части: 
