--- a/spec/0810Ratchet.tex
+++ b/spec/0810Ratchet.tex
@@ -24,7 +24,7 @@ $\algname{commit}(\texttt{NULL})$.
 $S\leftarrow S\oplus T$.
 %
 % Другие варианты: 
-% - $S[\dots k)\leftarrow 0^k$, $k\in\{l,2l,r\}$;
+% - $S[\dots k)\leftarrow 0^k$, $k\in\{\ell,2\ell,r\}$;
 % - $S[\dots r)\leftarrow T[\dots r)$.
 %
 \end{enumerate}
