--- a/spec/0813AE.tex
+++ b/spec/0813AE.tex
@@ -5,27 +5,27 @@
 Аутентифицированное шифрование задается алгоритмом установки 
 защиты $\algname{bash-prg-ae}$ и алгоритмом снятия защиты
 $\algname{bash-prg-ae}^{-1}$. Параметрами алгоритмов являются 
-уровень стойкости $l\in\{128,192,256\}$ и емкость $d\in\{1,2\}$. 
+уровень стойкости $\ell\in\{128,192,256\}$ и емкость $d\in\{1,2\}$. 
 
-Входными данными $\algname{bash-prg-ae}[l,d]$ являются 
+Входными данными $\algname{bash-prg-ae}[\ell,d]$ являются 
 анонс~$A\in\{0,1\}^{32*}$, сообщение~$X\in\{0,1\}^{8*}$, ассоциированные
 данные~$I\in\{0,1\}^{8*}$ и ключ~$K\in\{0,1\}^{32*}$.
 %
 Длины $A$ и $K$ должны быть не больше $480$, длина~$K$ должна быть не 
-меньше~$l$.
+меньше~$\ell$.
 
-Выходными данными $\algname{bash-prg-ae}[l,d]$ являются 
-зашифрованное сообщение~$Y\in\{0,1\}^{|X|}$ и имитовставка~$T\in\{0,1\}^l$.
+Выходными данными $\algname{bash-prg-ae}[\ell,d]$ являются 
+зашифрованное сообщение~$Y\in\{0,1\}^{|X|}$ и имитовставка~$T\in\{0,1\}^\ell$.
 
-Входными данными $\algname{bash-prg-ae}^{-1}[l,d]$ являются 
+Входными данными $\algname{bash-prg-ae}^{-1}[\ell,d]$ являются 
 анонс~$A\in\{0,1\}^{32*}$, зашифрованное сообщение~$Y\in\{0,1\}^{8*}$, 
-ассоциированные данные~$I\in\{0,1\}^{8*}$, имитовставка~$T\in\{0,1\}^l$ 
+ассоциированные данные~$I\in\{0,1\}^{8*}$, имитовставка~$T\in\{0,1\}^\ell$ 
 и ключ~$K\in\{0,1\}^{32*}$.
 %
 Длины $A$ и $K$ должны быть не больше $480$, длина~$K$ должна быть не 
-меньше~$l$.
+меньше~$\ell$.
 
-Выходными данными $\algname{bash-prg-ae}^{-1}[l,d]$ являются 
+Выходными данными $\algname{bash-prg-ae}^{-1}[\ell,d]$ являются 
 либо признак ошибки~$\perp$, либо расшифрованное сообщение~$X\in\{0,1\}^{|Y|}$. 
 %
 Возврат~$\perp$ означает нарушение целостности входных данных.
@@ -41,10 +41,11 @@ $\algname{bash-prg-ae}^{-1}$. Параметрами алгоритмов явл
 
 \subsection{Алгоритм установки защиты}\label{PRG.AE.Wrap}
 
-Установка защиты $\algname{bash-prg-ae}[l,d](A,X,I,K)$ выполняется следующим образом:
+Установка защиты $\algname{bash-prg-ae}[\ell,d](A,X,I,K)$ выполняется следующим 
+образом:
 \begin{enumerate}
 \item
-Выполнить $\alpha.\algname{start}[l,d](A,K)$.
+Выполнить $\alpha.\algname{start}[\ell,d](A,K)$.
 \item
 Обработать $(X,I)$:
 \begin{enumerate}
@@ -53,14 +54,13 @@ $\alpha.\algname{absorb}(I)$;
 \item
 $Y\leftarrow\alpha.\algname{encrypt}(X)$;
 \item
-$T\leftarrow \alpha.\algname{squeeze}(l)$;
+$T\leftarrow \alpha.\algname{squeeze}(\ell)$;
 \item
 возвратить $(Y,T)$.
 \end{enumerate}
 \end{enumerate}
 
 \begin{note}
-Примечание~1~--- 
 Если $I=\perp$, то шаг~2.1 может быть пропущен.
 %
 Если $X=\perp$, то шаг~2.2 может быть упрощен: $Y\leftarrow\perp$.
@@ -70,30 +70,28 @@ $T\leftarrow \alpha.\algname{squeeze}(l)$;
 \end{note}
 
 \begin{note}
-Примечание~2~--- После возврата $(Y,T)$ работу с автоматом
+После возврата $(Y,T)$ работу с автоматом
 можно продолжить и обработать новую пару~$(X,I)$, повторяя шаг 2.
 \end{note}
 
 \begin{note}
-Примечание~3~--- Перед обработкой новой пары~$(X,I)$ можно ввести
-новые анонс~$A$ и ключ~$K$ с помощью 
-команды~$\alpha.\algname{restart}(A, K)$.
+Перед обработкой новой пары~$(X,I)$ можно ввести новые анонс~$A$ и ключ~$K$ с 
+помощью команды~$\alpha.\algname{restart}(A, K)$.
 \end{note}
 
 \begin{note}
-Примечание~4~--- 
 После обработки~$(X,I)$ можно вызвать 
-команду~$\alpha.\algname{ratchet}(\perp)$. Вызов блокирует  
-определение~$X$ по~$(Y,I)$ даже после раскрытия состояния автомата. 
+команду~$\alpha.\algname{ratchet}(\perp)$. Вызов блокирует определение~$X$ 
+по~$(Y,I)$ даже после раскрытия состояния автомата.
 \end{note}
 
 \subsection{Алгоритм снятия защиты}\label{PRG.AE.Unwrap}
 
-Снятие защиты $\algname{bash-prg-ae}^{-1}[l,d](A,Y,I,T,K)$ выполняется 
+Снятие защиты $\algname{bash-prg-ae}^{-1}[\ell,d](A,Y,I,T,K)$ выполняется 
 следующим образом:
 \begin{enumerate}
 \item
-Выполнить $\alpha.\algname{start}[l,d](A,K)$.
+Выполнить $\alpha.\algname{start}[\ell,d](A,K)$.
 \item
 Обработать $(Y,I,T)$:
 \begin{enumerate}
@@ -102,15 +100,14 @@ $\alpha.\algname{absorb}(I)$;
 \item
 $X\leftarrow\alpha.\algname{decrypt}(Y)$;
 \item
-если $T\neq\alpha.\algname{squeeze}(l)$, то возвратить~$\perp$;
+если $T\neq\alpha.\algname{squeeze}(\ell)$, то возвратить~$\perp$;
 \item
 возвратить $X$.
 \end{enumerate}
 \end{enumerate}
 
 \begin{note}
-Примечание~5~--- Расширения алгоритма установки защиты в соответствии 
-с примечаниями~1--4 зеркально переносятся на алгоритм снятия защиты
-с одним уточнением: после возврата~$\perp$ обработка новых троек~$(Y,I,T)$
-должна быть прекращена.
+Расширения алгоритма установки защиты в соответствии с примечаниями~1--4 
+зеркально переносятся на алгоритм снятия защиты с одним уточнением: после 
+возврата~$\perp$ обработка новых троек~$(Y,I,T)$ должна быть прекращена.
 \end{note}
