--- a/spec/913TestHash.tex
+++ b/spec/913TestHash.tex
@@ -1,9 +1,9 @@
 \hiddensection{Хэширование (базовые алгоритмы)}\label{TEST.Hash}
 
 В таблице~\ref{Table.TEST.Hash} представлены примеры хэширования
-с помощью алгоритмов~$\algname{bash-hash}[l]$.
+с помощью алгоритмов~$\algname{bash-hash}[\ell]$.
 %
-В таблице для различных уровней стойкости~$l$ приводятся хэш-значения 
+В таблице для различных уровней стойкости~$\ell$ приводятся хэш-значения 
 сообщения~$S[\dots 8m)$, где~$S$~--- первое слово в таблице~\ref{Table.TEST.F}.
 
 \clearpage
@@ -16,7 +16,7 @@ $m$ & Хэш-значение\\
 \hline
 %
 \hline
-\multicolumn{2}{|c|}{$l=128$}\\
+\multicolumn{2}{|c|}{$\ell=128$}\\
 \hline
 $0$ &
 $\hex{114C3DFAE373D9BC~BC3602D6386F2D6A~2059BA1BF9048DBA~A5146A6CB775709D}$\\
@@ -32,7 +32,7 @@ $\hex{1393FA1B65172F2D~18946AEAE576FA1C~F54FDD354A0CB297~4A997DC4865D3100}$\\
 %
 \hline
 \hline
-\multicolumn{2}{|c|}{$l=192$}\\
+\multicolumn{2}{|c|}{$\ell=192$}\\
 \hline
 $95$ &
 $\hexz{64334AF830D33F63~E9ACDFA184E32522~103FFF5C6860110A~2CD369EDBC04387C}$\\
@@ -51,7 +51,7 @@ $\hex{FC05A17405C55176~99DA44B7EF5F55AB}$\\
 %
 \hline
 \hline
-\multicolumn{2}{|c|}{$l=256$}\\
+\multicolumn{2}{|c|}{$\ell=256$}\\
 \hline                                                        
 $63$ &
 $\hexz{2A66C87C189C12E2~55239406123BDEDB~F19955EAF0808B2A~D705E249220845E2}$\\
