--- a/spec/915TestPrgHash.tex
+++ b/spec/915TestPrgHash.tex
@@ -1,12 +1,12 @@
 \hiddensection{Хэширование (программируемые алгоритмы)}\label{TEST.PrgHash}
 
 В таблице~\ref{Table.TEST.PrgHash} представлены примеры хэширования
-с помощью алгоритмов~$\algname{bash-prg-hash}[l,d]$.
+с помощью алгоритмов~$\algname{bash-prg-hash}[\ell,d]$.
 %
-В таблице для различных пар~$(l,d)$ приводятся хэш-значения 
+В таблице для различных пар~$(\ell,d)$ приводятся хэш-значения 
 сообщения~$S[\dots 8m)$, где~$S$~--- первое слово в таблице~\ref{Table.TEST.F}.
 %
-При хэшировании анонс $A=\perp$, длина хэш-значения $n=2l$.
+При хэшировании анонс $A=\perp$, длина хэш-значения $n=2\ell$.
 
 \begin{table}[H]
 \caption{Хэширование (программируемые алгоритмы)}\label{Table.TEST.PrgHash}
@@ -16,7 +16,7 @@ $m$ & Хэш-значение\\
 \hline
 %
 \hline
-\multicolumn{2}{|c|}{$(l,d)=(128,2)$}\\
+\multicolumn{2}{|c|}{$(\ell,d)=(128,2)$}\\
 \hline
 $0$ &
 $\hex{36FA075EC15721F2~50B9A641A8CB99A3~33A9EE7BA8586D06~46CBAC3686C03DF3}$\\
@@ -32,7 +32,7 @@ $\hex{48DB61832CA10090~03BC0D8BDE67893A~9DC683C48A5BC23A~C884EB4613B480A6}$\\
 %
 \hline
 \hline
-\multicolumn{2}{|c|}{$(l,d)=(192,1)$}\\
+\multicolumn{2}{|c|}{$(\ell,d)=(192,1)$}\\
 \hline
 $143$ &
 $\hexz{6166032D6713D401~A6BC687CCFFF2E60~3287143A84C78D2C~62C71551E0E2FB2A}$\\
