--- a/spec/02Refs.tex
+++ b/spec/02Refs.tex
@@ -15,8 +15,8 @@
 открытых систем. Спецификация абстрактно-синтаксической нотации
 версии 1 (АСН.1)
 
-\begin{note}
-Примечание~---~При пользовании настоящим стандартом целесообразно проверить
+\begin{note*}
+При пользовании настоящим стандартом целесообразно проверить
 действие ТНПА по каталогу, составленному по состоянию на 1 января текущего года,
 и по соответствующим информационным указателям, опубликованным в текущем году.
 
@@ -24,5 +24,5 @@
 следует руководствоваться действующими взамен ТНПА. Если ссылочные ТНПА
 отменены без замены, то положение, в котором дана ссылка на них, применяется в
 части, не затрагивающей эту ссылку.
-\end{note}
+\end{note*}
 
