--- a/spec/0812Hash.tex
+++ b/spec/0812Hash.tex
@@ -3,10 +3,10 @@
 \subsection{Интерфейс}\label{PRG.Hash.IFace}
 
 Хэширование задается алгоритмом~$\algname{bash-prg-hash}$.
-Параметрами алгоритма являются уровень стойкости $l\in\{128,192,256\}$
+Параметрами алгоритма являются уровень стойкости $\ell\in\{128,192,256\}$
 и емкость $d\in\{1,2\}$. 
 
-Входными данными~$\algname{bash-prg-hash}[l, d]$ являются 
+Входными данными~$\algname{bash-prg-hash}[\ell, d]$ являются 
 анонс~$A\in\{0,1\}^{32*}$, хэшируемое сообщение~$X\in\{0,1\}^{8*}$ 
 и длина хэш-значения~$n$. Длина~$A$ не должна превосходить~$480$.
 
@@ -18,10 +18,11 @@
 
 \subsection{Алгоритм}\label{PRG.Hash.Alg}
 
-Хэширование $\algname{bash-prg-hash}[l,d](A,X,n)$ выполняется следующим образом:
+Хэширование $\algname{bash-prg-hash}[\ell,d](A,X,n)$ выполняется следующим 
+образом:
 \begin{enumerate}
 \item
-Выполнить $\alpha.\algname{start}[l,d](A,\perp)$.
+Выполнить $\alpha.\algname{start}[\ell,d](A,\perp)$.
 \item
 Выполнить $\alpha.\algname{absorb}(X)$.
 \item
