--- a/spec/92ASN.tex
+++ b/spec/92ASN.tex
@@ -7,25 +7,25 @@
 \begin{center}
 \begin{tabular}{p{3.6cm}p{12.7cm}}
 \texttt{bashNNN} &
-Алгоритм хэширования $\algname{bash-hash}[l]$.\\
+Алгоритм хэширования $\algname{bash-hash}[\ell]$.\\
 %
 \texttt{bash-prg-hashNNND} &
-Алгоритм хэширования $\algname{bash-prg-hash}[l,d]$.\\
+Алгоритм хэширования $\algname{bash-prg-hash}[\ell,d]$.\\
 %
 \texttt{bash-prg-aeLLLD} &
-Алгоритм аутентифицированного шифрования $\algname{bash-prg-ae}[l,d]$.\\
+Алгоритм аутентифицированного шифрования $\algname{bash-prg-ae}[\ell,d]$.\\
 %
 \texttt{bash-f}  &
 Алгоритм вычисления значений sponge-функции (см.~\ref{F}).\\
 \end{tabular}
 \end{center}
 
-Здесь \texttt{NNN}~--- десятичный код числа~$2l$, 
-\texttt{LLL}~--- десятичный код числа~$l$, 
+Здесь \texttt{NNN}~--- десятичный код числа~$2\ell$, 
+\texttt{LLL}~--- десятичный код числа~$\ell$, 
 \texttt{D}~--- десятичный код числа~$d$.
 
-Алгоритм $\algname{bash-hash}[l]$ определяет функцию 
-хэширования~$h\colon \{0,1\}^*\to\{0,1\}^{2l}$. 
+Алгоритм $\algname{bash-hash}[\ell]$ определяет функцию 
+хэширования~$h\colon \{0,1\}^*\to\{0,1\}^{2\ell}$. 
 Эта функция может использоваться в алгоритмах 
 ЭЦП СТБ~34.101.45, уточняя их.
 %
@@ -36,15 +36,15 @@
 \begin{tabular}{p{4.4cm}p{12.0cm}}
 \texttt{bign-with-bashNNN} &
 Алгоритмы ЭЦП СТБ 34.101.45 (пункт 7.1)
-c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$.\\
+c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2\ell]$.\\
 %
 \texttt{bign-ibs-with-bashNNN} &
 Алгоритмы идентификационной ЭЦП СТБ 34.101.45
-c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$.\\
+c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2\ell]$.\\
 \end{tabular}
 \end{center}
 
-Здесь, как и прежде, \texttt{NNN}~--- десятичный код числа~$2l$.
+Здесь, как и прежде, \texttt{NNN}~--- десятичный код числа~$2\ell$.
 
 Модуль АСН.1 имеет следующий вид:
 
