Fix ref to the last note

--- a/spec/_defs.sty
+++ b/spec/_defs.sty
@@ -42,7 +42,7 @@
 
 %%%%%%%%%%% Environments %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcounter{note}[subsubsection]
+\newcounter{note}[section]
 
 \newenvironment{note*}{
   \def\thenotename{Примечание~---~}
